name:                 StdDraw
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Robert Obkircher
maintainer:           robert.obkircher@gmail.com
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable StdDraw
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5, GLUT, data-default, mtl
  hs-source-dirs:       src
  default-language:     Haskell2010
